test/integration/good/parser-generator/fun-args-trailing-comma.stan
functions {
  void foo(real x, real y,){
    return;
  }
}
